--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,6 @@
 version: 0.0
 os: linux
-runas: root
+runas: app
 
 files:
   - source: /
@@ -12,16 +12,16 @@ hooks:
   BeforeInstall:
     - location: scripts/install.sh
       timeout: 300
-      runas: root
+      runas: app
   ApplicationStop:
     - location: scripts/stop_script.sh
       timeout: 300
-      runas: root
+      runas: app
   ApplicationStart:
     - location: scripts/start_script.sh
       timeout: 300
-      runas: root
+      runas: app
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 300
-      runas: root
+      runas: app
